@@ -1,4 +1,5 @@
 0.1.6
+Added user command for GUI root privileges.
 Added history drop down for 'Replace'.
 Added history drop down for 'Find'.
 Added 'Don't Warn On File Change' to prefs.
